# rackbrain-day

./: AGENTS.md  README.md  Testviewlog.py  database_config.py  eve_cmd_runner.sh  log_2603YW10YG_7940071_INIT_SYS_CHECK_2.txt  pyproject.toml  requirements.txt
audit_raw_export/: README.md  audit_raw_export.py  audit_raw_export_config.yaml
config/: CONFIG_REFERENCE.md  RULES_REFERENCE.md  config.example.yaml  config.yaml  config.yaml.example
config/rules/: RULES_YAML_REFERENCE.md  approval_rules.yaml  cinder_verification.yaml  dimm_rules.yaml  eve_power_on_ check_rules.yaml  generic_rules.yaml  pci_rules.yaml  precheck_rules.yaml  rule_template_comprehensive.yaml  temporary_rules.yaml  untested_rules.yaml  workflows_bios_deferred_update.yaml  workflows_ilom_console.yaml  workflows_psu_ac_loss.yaml  workflows_snbench_200g_jumper.yaml  workflows_telnet_console.yaml
doc/: AGENT.md  ARCHITECTURE.md  INTEGRATIONS.md  README.md  RULES.md  RUNBOOK.md
docs/: ARCHITECTURE.md  README.md  RULE_AUTHORING.md  RUNBOOK.md
llm_catering/: CONTRACT.md  README.md  __init__.py  build_llm_dataset.py  cli_mine_rules.py  features.py  rule_mining.py  schemas.py  validate_dataset.py
logs/: rackbrain_rule_matches.txt
rackbrain/: __init__.py  __main__.py  eve_command_runner.py  eve_remote.py
rackbrain.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
rackbrain/adapters/: hyvetest_client.py  ilom_client.py  ilom_parser.py  (+1 more)
scripts/: bootstrap  bootstrap.sh  env.example.sh  health_check.sh  install.sh  rackbrain
state/: rackbrain_state.sqlite
(+20 files in other folders)
