[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rackbrain"
version = "1.0.0"
description = "Automated Jira ticket triage using YAML rules"
readme = "README.md"
requires-python = ">=3.6,<3.10"
dependencies = [
  "dataclasses>=0.8; python_version < \"3.7\"",
  "PyYAML==5.3.1",
  "requests==2.27.1",
  "PyMySQL==0.10.1",
  "urllib3==1.26.20",
  "Pillow==8.4.0",
  "numpy==1.19.5",
  "rapidocr-onnxruntime==1.2.0",
  "onnxruntime==1.8.1",
  "opencv-python==4.6.0.66",
  "Shapely==1.8.5.post1",
  "pyclipper==1.3.0.post6",
  "protobuf==3.19.6",
  "flatbuffers==25.9.23",
  "six==1.17.0",
]

[project.scripts]
rackbrain = "rackbrain.cli.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["rackbrain*"]

[tool.setuptools.package-data]
rackbrain = ["py.typed"]
